plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.0'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'org.hidetake.ssh' version '2.10.1'
}

group = 'me.synology.hajubal'
version = '1.0.1'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}

	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
}

jar {
	//plain.jar 파일 생성되지 않도록 설정
	enabled = false
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation('org.springframework.boot:spring-boot-starter-web') {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
	}
	implementation 'org.springframework.boot:spring-boot-starter-undertow'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	implementation 'com.slack.api:slack-api-client:1.27.1'
	implementation 'org.jsoup:jsoup:1.15.3'
	implementation 'mysql:mysql-connector-java:8.0.30'

	compileOnly 'org.projectlombok:lombok'

	runtimeOnly 'com.h2database:h2'
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

tasks.named('test') {
	useJUnitPlatform()
}

//서버 접속 정보
remotes {
	dockerServer {
		host = "${SSH_HOST}"
		user = "${SSH_ID}"
		password = "${SSH_PW}"
		port = Integer.parseInt("${SSH_PORT}")
	}
}

task dev {
	doLast {
		def path = "${project.buildDir.getAbsolutePath()}\\lib\\${jar.archiveName}"
		def dir = fileTree(dir: 'build').getDir()
		def dockerFile = "${project.file("Dockerfile")}"
		def buildPath = fileTree(dir: 'build').getDir()

		println path
		println dir
		println dockerFile
		println buildPath

		def archiveNamePath = "${bootJar.archiveFile.get().asFile}"
		println 'archiveNamePath: ' + archiveNamePath

		def archiveName = "${bootJar.archiveName}"
		println 'archiveName: ' + archiveName

		def archiveFileName = "${jar.archiveFileName.get()}"
		println 'archiveFileName: ' + archiveFileName

		def archiveBaseName = "${jar.archiveBaseName.get()}"
		println 'archiveBaseName: ' + archiveBaseName

		def archiveExtension = "${jar.archiveExtension.get()}"
		println 'archiveExtension: ' + archiveExtension

		println ">>>>> ${jar.archiveFile.get().asFile.getAbsolutePath()}"

		println "project name: ${project.name}"

		println 'host: ' + project.SSH_HOST
		println 'id: ' + project.SSH_ID
		println 'pw: ' + project.SSH_PW
		println 'port: ' + Integer.valueOf(project.SSH_PORT)
	}
}

//도커 서버 정보 출력
task showPlatformVersion {
	doLast {
		println ssh.version
		ssh.run {
			session(remotes.dockerServer) {
				execute 'uname -a'
				//execute 'cat /etc/*-release', ignoreError: true
			}
		}
	}
}

test {
	exclude '**/*'
}

//도커 서버에 이미지 생성 및 컨테이너 실행
//org.hidetake.groovy.ssh.operation.SftpException: Failed SFTP PUT: d:\~~ -> dockerServer:/var/~~: (SSH_FX_NO_SUCH_FILE: A reference was made to a file which does not exist): No such file
//오류 나면서 안됨. 원인 파악 불가
task dockerDeploy() {
	dependsOn('build')

	doLast {
		println ssh.version
		ssh.run {
			session(remotes.dockerServer) {
				def command
				def imageName = "${project.name}:${project.version}"
				def containerName = "${project.name}"
				def buildPath = "${project.buildDir.getAbsolutePath()}\\libs"
				def jarName = "${jar.getArchiveBaseName().get()}-${jar.getArchiveVersion().get()}.jar"
				def from = "${buildPath}\\${jarName}"
				def to = "/var/services/homes/hajubal/dockerfile/${project.name}"
				def hostPort = "7070"
				def containerPort = "8080"
				def dockerFile = "${project.file("Dockerfile")}"

//				command = 'docker version'
//				println "\n\$ ${command}"
//				execute(command){r->println r}

				command = "ls ${to}"
				println "\n\$ ${command}"
				execute(command){r->println r}

				//프로젝트 폴더 삭제 후 재생성
//				command = "rm -r ${to}"
//				println "\n\$ ${command}"
//				execute(command){r->println r}
//
//				command = "mkdir ${to}"
//				println "\n\$ ${command}"
//				execute(command){r->println r}

				//프로젝트 폴더에 jar 파일 복사
				println "\n\$ put from:${from}, into: ${to}/${containerName}.jar"
				put from: from, into: to + "/" + containerName + ".jar"
				//put from: 'C:\\Users\\hajubal\\IdeaProjects\\pickupcoins\\build\\libs\\pickupcoins-1.0.0.jar', into: to

				//프로젝트 폴더에 Dockerfile 복사
				println "\n\$ put from: ${dockerFile}, into: ${to}"
				put from: dockerFile, into: to

				//기존 컨테이너 중지/삭제
				command = "docker stop ${containerName}"
				println "\n\$ ${command}"
				execute(command, ignoreError: true){r->println r}

				command = "docker rm ${containerName}"
				println "\n\$ ${command}"
				execute(command, ignoreError: true){r->println r}

				//이번에 생성되는 이미지 명으로 이미 생성된 이미지 삭제
				command = "docker rmi ${imageName}"
				println "\n\$ ${command}"
				execute(command, ignoreError: true){r->println r}

				//Dockerfile 실행
				command = "docker build ${to} -t ${imageName}"
				println "\n\$ ${command}"
				execute(command){r->println r}

				//신규 이미지로 컨테이너 생성/실행
				command = "docker run -d -p ${hostPort}:${containerPort} --name ${containerName} ${imageName}"
				println "\n\$ ${command}"
				execute(command){r->println r}
			}
		}
	}
}
